<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/heirloom_background"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/heirloom_surface"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/heirloom_on_surface"
        app:title="@string/compose_message_title"
        app:titleTextColor="@color/heirloom_on_surface" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_horizontal_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_message"
                style="@style/Widget.Heirloom.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compose_message_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/Widget.Heirloom.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_horizontal_padding"
        android:text="@string/action_send" />

</LinearLayout>
